# llm-zero-to-trained

./: .gitignore  PROGRESS.md  README.md  launch_host.py  pyproject.toml  scaffold_llm_project.py
.github/workflows/: discord_progress.yml
configs/: default_config.yaml  preprocess_config.yaml  tokenizer_training.yaml
data/: batch_generator.py  dataset_loader.py
docs/: structure.md
docs/tokenizers/: bpe_implementation.md
model/: attention.py  model_config.py
notebooks/: 00_minimal_torch_gpu_check.ipynb  bootstrap.py
notebooks/ch02/01_main-chapter-code/: ch02.ipynb
notebooks/ch02/experiments/: bpe_paper_implementation.ipynb
src/: config.py  exception.py  host.py  logger_manager.py  print_torch_info.py
src/config/: config.py
src/llmscratch/: exception.py  host.py  launch_host.py  logger_manager.py
src/llmscratch/components/io/: text_loader.py
src/llmscratch/components/trainers/: base_trainer.py  bpe_trainer.py
src/llmscratch/config/: config.py
src/llmscratch/models/: command_line_args.py
src/llmscratch/pipelines/: preprocessing_pipeline.py  tokenizer_training_pipeline.py
src/llmscratch/runtime/: command_line.py  logging_argument_parser.py
src/llmscratch/services/: text_preprocessing_service.py
src/llmscratch/utils/: bpe_format_utils.py
src/runtime/: command_line.py  logging_argument_parser.py
tokenizer/: bpe_tokenizer.py  unigram_tokenizer.py  wordpiece_tokenizer.py
train/: losses.py  optimizer.py  trainer.py
