[project]
name = "llm-zero-to-trained"
version = "0.1.0"
description = "A from-scratch LLM implementation for educational purposes"
authors = [{ name = "Kenneth Pouncey", email = "kjpou@pt.lu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "tqdm",
    "matplotlib",
    "notebook",
    "datasets",
    "torch>=2.7.1",
    "pandas>=2.3.1",
    "tiktoken>=0.9.0",
    "python-dotenv>=1.1.1",
]
[project.scripts]
llmscratch = "llmscratch.launch_host:launch"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]